--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.9.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "stripe": "^12.9.0",
     "typescript": "5.1.3"
   },
   "devDependencies": {
